<resources>
    <string name="app_name">NYTNews</string>
    <string name="queryhint">enter search query</string>
    <string name="btn_search">search</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="begin_date">Begin date</string>
    <string name="sort_order">Sort Order</string>
    <string name="oldest">oldest</string>
    <string name="newest">newest</string>
    <string name="alphabetical">alphabetical</string>
    <string name="newsTopic">Topics</string>
    <!--//Arts, Fashion & Style, Sports-->
    <string name="checkbox_option_a">arts</string>
    <string name="checkbox_option_b">fashion</string>
    <string name="checkbox_option_c">sports</string>
    <string name="save">save</string>
</resources>
